--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ env:
   - PUPPET_GEM_VERSION="~> 4.2.0"
 rvm:
   - 2.0
-script: puppet parser validate .
+script: 
+- puppet parser validate .
+- bundle exec rspec spec/acceptance
